# ipm

./: README.md  market_analysis.json  pyproject.toml
src/ipm/: crew.py  main.py  models.py  test.py
src/ipm/config/: agents.yaml  tasks.yaml
src/ipm/tools/: fin.py  serper2.py  serper_news.py
