[project]
name = "ipm"
version = "0.1.0"
description = "ipm using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "agno>=1.2.6",
    "crewai[tools]>=0.108.0,<1.0.0",
    "exa-py>=1.9.1",
    "google-genai>=1.2.0",
    "google-generativeai>=0.8.4",
    "yfinance>=0.2.55",
]

[project.scripts]
ipm = "ipm.main:run"
run_crew = "ipm.main:run"
train = "ipm.main:train"
replay = "ipm.main:replay"
test = "ipm.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
